--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@ body {
     color: #fff;
     background: #17181c;
     font-family: sans-serif;
+    margin: 0;
 }
 
 header {
@@ -12,24 +13,38 @@ header h1 {
     font-size: 40px;
     font-weight: 800;
 }
-
+main {
+    min-height: calc(100vh - 220px);
+}
 footer {
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
-footer .copyright {
+footer .copyright,
+.github {
     font-size: 14px;
     color: #333;
     text-align: center;
 }
-footer .copyright a {
+footer .copyright a,
+.github {
     color: #444;
 }
-footer .copyright a:hover {
+footer .copyright a:hover,
+.github:hover {
     color: #555;
 }
 footer .copyright:before {
     content: '©';
+}
+.school {
+    width: 61px;
+    height: 23px;
+    background-image: url(./assets/rs_school.svg);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
 }
