--- a/src/components/view/sources/sources.css
+++ b/src/components/view/sources/sources.css
@@ -1,8 +1,8 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
+    height: 100%;
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
@@ -14,7 +14,7 @@
     font: inherit;
     line-height: 1;
     margin: 0.5em;
-    padding: 1em 2em;
+    padding: 0.4em 0.5em;
     color: #70d6ff;
     transition: 0.25s;
     cursor: pointer;
@@ -26,6 +26,8 @@
     color: #69db7e;
     box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
     transform: translateY(-0.25em);
+    transform: scale(1.4);
+    background-color: black;
 }
 
 .source__item-name {
