--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,9 @@ body {
     font-family: sans-serif;
     margin: 0;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 header {
     padding: 10px 30px;
 }
@@ -39,10 +41,11 @@ footer .github a:hover {
 footer .copyright:before {
     content: '©';
 }
-.school {
+.link-school {
+    display: block;
     width: 61px;
     height: 23px;
-    background-image: url(./assets/rs_school.svg);
+    background-image: url('./assets/rs_school.svg');
     background-color: transparent;
     border: none;
     cursor: pointer;
