--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -306,20 +306,29 @@ h3 {
 }
 .template-toy {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 222px;
-    height: 340px;
+    height: 366px;
     border-radius: 10px;
     background-color: $button-bg;
     backdrop-filter: blur(6px);
     cursor: pointer;
-    // margin-right: 25px;
-    // margin-bottom: 35px;
     margin: 0 30px 30px 30px;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.24) 0%, rgba(26, 89, 102, 0.5) 100%);
 
     h2 {
         font-size: 22px;
         padding: 18px;
     }
+}
+.description {
+    padding: 16px 0 10px 0;
+}
+.img-toy {
+    width: 120px;
+    height: 130px;
+    object-fit: contain;
 }
 
 .rs-school {
