--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -311,6 +311,11 @@ h3 {
     outline: none;
     font-size: 16px;
     margin-bottom: 50px;
+
+    &:hover {
+        background-color: lighten($color: $button-bg, $amount: 10);
+        transition: 0.3s;
+    }
 }
 .container {
     display: flex;
