--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -102,7 +102,46 @@ header {
     display: flex;
     justify-content: end;
 }
+.warning {
+    visibility: hidden;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 333px;
+    height: 180px;
+    background: aqua;
+    z-index: 10;
+    padding: 32px 10px 0 10px;
+    border-radius: 10px;
+    border: $border;
+    color: black;
+    text-align: center;
+    font-size: 28px;
 
+    button {
+        background-image: url('./../assets/svg/cross.svg');
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: block;
+        width: 32px;
+        height: 32px;
+        background-color: transparent;
+        background-size: cover;
+        border: none;
+        cursor: pointer;
+        background-repeat: no-repeat;
+        &:hover {
+            transition: 0.3s;
+            filter: drop-shadow(0px 0px 2px black);
+        }
+    }
+}
+.visible {
+    visibility: visible;
+}
 .fav-select {
     width: 48px;
     height: 60px;
@@ -362,17 +401,32 @@ h3 {
     background-image: url('./../assets/svg/rss.svg');
     width: 220px;
     height: 82px;
+    margin: 15px;
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: cover;
     border: none;
     cursor: pointer;
+    &:hover {
+        transition: 0.3s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
 }
 
 footer {
     display: flex;
     justify-content: space-between;
     align-items: end;
+    a {
+        color: #fff;
+        font-size: 28px;
+        text-decoration: none;
+        padding: 15px;
+        &:hover {
+            transition: 0.3s;
+            filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+        }
+    }
 }
 
 .heart {
