feat: add search by card name

--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -367,6 +367,7 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    font-size: 28px;
 }
 .template-toy {
     display: flex;
