--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -38,7 +38,7 @@ p {
     flex-direction: column;
     background-image: url('./../assets/bg.jpg');
     min-width: 100%;
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 74px);
 }
 
 .wrapper-main-page {
@@ -48,6 +48,13 @@ p {
     flex-direction: column;
     min-height: calc(100vh - 138px);
 }
+
+.wrapper-tree-page {
+    display: flex;
+    min-width: 100%;
+    min-height: calc(100vh - 74px);
+}
+
 .main-block {
     display: flex;
 }
@@ -59,6 +66,7 @@ header {
 }
 .header-container {
     display: flex;
+    align-items: flex-start;
 }
 .volume {
     display: block;
@@ -409,7 +417,7 @@ h3 {
     display: block;
     background-image: url('./../assets/svg/rss.svg');
     width: 213px;
-    height: 47px;
+    height: 43px;
     margin: 15px;
     background-repeat: no-repeat;
     background-color: transparent;
@@ -465,7 +473,7 @@ footer {
 
 .header-welcome {
     display: flex;
-    height: 50px;
+    height: 63px;
     width: 100%;
     background-color: $color-bg;
 }
@@ -520,11 +528,60 @@ footer {
     width: 100px;
     font-size: 30px;
     margin-left: 40px;
-    padding-top: 12px;
+    padding-top: 16px;
     cursor: pointer;
     text-transform: uppercase;
     &:hover {
         transition: 0.4s;
         filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
     }
+}
+
+.switch-home {
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    margin-right: 30px;
+    text-transform: uppercase;
+    cursor: pointer;
+    &:hover {
+        transition: 0.4s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
+}
+
+.switch-to-tree {
+    font-size: 30px;
+    margin-left: 30px;
+    text-transform: uppercase;
+    cursor: pointer;
+    &:hover {
+        transition: 0.4s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
+}
+
+.left-side {
+    display: flex;
+    width: 20%;
+    background-position: right;
+    background-image: url('./../assets/bg.jpg');
+    background-image: linear-gradient(to right, rgba(25, 47, 45, 0.7) 0%, rgba(25, 47, 45, 0.7) 100%),
+        url('./../assets/bg.jpg');
+}
+.right-side {
+    display: flex;
+    width: 20%;
+    background-image: linear-gradient(to right, rgba(25, 47, 45, 0.7) 0%, rgba(25, 47, 45, 0.7) 100%),
+        url('./../assets/bg.jpg');
+}
+.tree {
+    width: 60%;
+    background-image: url('./../assets/bg/4.jpg');
+}
+
+.sound-snow-btn {
+    display: flex;
+    height: 50px;
+    margin: 25px;
 }
