--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -1,6 +1,7 @@
 $color-bg: #192f2d;
 $border: 1px solid #278d9f;
 $button-bg: rgba(31, 112, 127, 0.3);
+$gradient: linear-gradient(to right, rgba(255, 255, 255, 0.24) 0%, rgba(26, 89, 102, 0.5) 100%);
 
 @font-face {
     font-family: 'Neucha';
@@ -78,6 +79,10 @@ header {
     border: none;
     cursor: pointer;
     background-repeat: no-repeat;
+    &:hover {
+        transition: 0.4s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
 }
 
 .snowfall {
@@ -90,8 +95,11 @@ header {
     border: none;
     cursor: pointer;
     background-repeat: no-repeat;
-    margin-left: 42px;
-    margin-right: 42px;
+    margin-left: 15px;
+    &:hover {
+        transition: 0.4s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
 }
 
 .search {
@@ -563,25 +571,182 @@ footer {
 
 .left-side {
     display: flex;
+    flex-direction: column;
     width: 20%;
     background-position: right;
     background-image: url('./../assets/bg.jpg');
     background-image: linear-gradient(to right, rgba(25, 47, 45, 0.7) 0%, rgba(25, 47, 45, 0.7) 100%),
         url('./../assets/bg.jpg');
+    h3 {
+        margin-bottom: 15px;
+    }
 }
 .right-side {
     display: flex;
+    flex-direction: column;
     width: 20%;
     background-image: linear-gradient(to right, rgba(25, 47, 45, 0.7) 0%, rgba(25, 47, 45, 0.7) 100%),
         url('./../assets/bg.jpg');
 }
 .tree {
     width: 60%;
+    display: flex;
+    justify-content: center;
     background-image: url('./../assets/bg/4.jpg');
 }
 
 .sound-snow-btn {
     display: flex;
+    align-items: center;
     height: 50px;
-    margin: 25px;
+    margin: 8px;
+}
+
+.sound-snow-btn .switch-home {
+    font-size: 18px;
+    margin-right: 20px;
+}
+.trees,
+.backgrounds {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+}
+.background {
+    width: 55px;
+    height: 56px;
+    border-radius: 10px;
+    border: 1px solid #cccc;
+    cursor: pointer;
+    margin: 2px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    &:nth-child(1) {
+        background-image: url('./../assets/bg/1.jpg');
+    }
+    &:nth-child(2) {
+        background-image: url('./../assets/bg/2.jpg');
+    }
+    &:nth-child(3) {
+        background-image: url('./../assets/bg/3.jpg');
+    }
+    &:nth-child(4) {
+        background-image: url('./../assets/bg/4.jpg');
+    }
+    &:nth-child(5) {
+        background-image: url('./../assets/bg/5.jpg');
+    }
+    &:nth-child(6) {
+        background-image: url('./../assets/bg/6.jpg');
+    }
+    &:nth-child(7) {
+        background-image: url('./../assets/bg/7.jpg');
+    }
+    &:nth-child(8) {
+        background-image: url('./../assets/bg/8.jpg');
+    }
+}
+.tree-select {
+    width: 103px;
+    height: 103px;
+    border-radius: 10px;
+    backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.5);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    margin: 6px;
+    &:nth-child(1) {
+        background-image: url('./../assets/tree/1.png');
+    }
+    &:nth-child(2) {
+        background-image: url('./../assets/tree/2.png');
+    }
+    &:nth-child(3) {
+        background-image: url('./../assets/tree/6.png');
+    }
+    &:nth-child(4) {
+        background-image: url('./../assets/tree/4.png');
+    }
+}
+.garlands {
+    display: flex;
+}
+.garland {
+    width: 22px;
+    height: 22px;
+    margin: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    &:nth-child(1) {
+        background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8);
+    }
+    &:nth-child(2) {
+        background-color: #f00;
+        border: 1px solid #f00;
+        filter: drop-shadow(0px 0px 2px #f00);
+    }
+    &:nth-child(3) {
+        background-color: #24e0ff;
+        border: 1px solid #24e0ff;
+        filter: drop-shadow(0px 0px 2px #24e0ff);
+    }
+    &:nth-child(4) {
+        background-color: #ff0;
+        border: 1px solid #ff0;
+        filter: drop-shadow(0px 0px 2px #ff0);
+    }
+    &:nth-child(5) {
+        background-color: #00ff2a;
+        border: 1px solid #00ff2a;
+        filter: drop-shadow(0px 0px 2px #00ff2a);
+    }
+}
+
+.switch-to-toys {
+    font-size: 18px;
+    text-transform: uppercase;
+    margin: 20px;
+    cursor: pointer;
+    &:hover {
+        transition: 0.4s;
+        filter: invert(76%) sepia(86%) saturate(6362%) hue-rotate(98deg) brightness(102%) contrast(134%);
+    }
+}
+
+.wrapper-tree-page h3 {
+    padding-left: 10px;
+}
+
+.select-toys-container,
+.saved-trees {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+.template-toy-sel {
+    width: 55px;
+    height: 55px;
+    margin: 2px;
+    border-radius: 10px;
+    backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.5);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+.saved-tree {
+    width: 105px;
+    height: 105px;
+    border-radius: 10px;
+    backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.5);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    margin: 5px;
 }
