--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -592,6 +592,7 @@ footer {
     width: 60%;
     display: flex;
     justify-content: center;
+    background-size: cover;
     background-image: url('./../assets/bg/4.jpg');
 }
 
@@ -609,16 +610,17 @@ footer {
 .trees,
 .backgrounds {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 15px;
 }
 .background {
-    width: 55px;
-    height: 56px;
+    width: 58px;
+    height: 58px;
     border-radius: 10px;
     border: 1px solid #cccc;
     cursor: pointer;
-    margin: 2px;
+    margin: 4px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -673,6 +675,7 @@ footer {
 }
 .garlands {
     display: flex;
+    justify-content: center;
 }
 .garland {
     width: 22px;
@@ -709,6 +712,7 @@ footer {
 
 .switch-to-toys {
     font-size: 18px;
+    text-align: end;
     text-transform: uppercase;
     margin: 20px;
     cursor: pointer;
@@ -725,6 +729,7 @@ footer {
 .select-toys-container,
 .saved-trees {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
@@ -755,4 +760,27 @@ footer {
 .active-btn {
     filter: invert(45%) sepia(68%) saturate(6362%) hue-rotate(98deg) brightness(142%) contrast(140%);
     filter: drop-shadow(0px 1px 7px #00ff2a);
+}
+
+@keyframes fall {
+    to {
+        transform: translateY(720px);
+    }
+}
+
+.snowflakes {
+    position: absolute;
+    height: 830px;
+    width: 800px;
+    left: 50%;
+    margin-left: -400px;
+    pointer-events: none;
+    z-index: 100;
+    overflow: hidden;
+}
+.fa-snowflake {
+    color: #fff;
+    position: absolute;
+    top: -20px;
+    animation: fall linear forwards;
 }
