--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -736,6 +736,7 @@ footer {
     margin-bottom: 20px;
 }
 .template-toy-sel {
+    position: relative;
     width: 55px;
     height: 55px;
     margin: 2px;
@@ -785,4 +786,21 @@ footer {
     position: absolute;
     top: -20px;
     animation: fall linear forwards;
+}
+
+.toy-img {
+    width: inherit;
+    cursor: move;
+}
+
+.counter {
+    position: absolute;
+    text-align: center;
+    padding-top: 4px;
+    bottom: 0;
+    right: 0;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background-color: #24c5db;
 }
