--- a/christmas-task/src/scss/style.scss
+++ b/christmas-task/src/scss/style.scss
@@ -3,6 +3,12 @@ $border: 1px solid #278d9f;
 $button-bg: rgba(31, 112, 127, 0.3);
 $gradient: linear-gradient(to right, rgba(255, 255, 255, 0.24) 0%, rgba(26, 89, 102, 0.5) 100%);
 
+$globe-width: 12px;
+$globe-height: 12px;
+$globe-spacing: 40px;
+$globe-spread: 3px;
+$light-off-opacity: 0.4;
+
 @font-face {
     font-family: 'Neucha';
     src: url('./../assets/fonts/Neucha-Regular.ttf');
@@ -347,7 +353,6 @@ h3 {
     margin-top: 10px;
     margin-bottom: 15px;
 }
-.noUi-handle:before,
 .noUi-handle:after {
     content: none;
 }
@@ -574,6 +579,7 @@ footer {
     flex-direction: column;
     width: 20%;
     background-position: right;
+    background-repeat: no-repeat;
     background-image: url('./../assets/bg.jpg');
     background-image: linear-gradient(to right, rgba(25, 47, 45, 0.7) 0%, rgba(25, 47, 45, 0.7) 100%),
         url('./../assets/bg.jpg');
@@ -612,7 +618,7 @@ footer {
 .trees,
 .backgrounds {
     display: flex;
-    justify-content: center;
+    margin-left: 15px;
     flex-wrap: wrap;
     margin-bottom: 15px;
 }
@@ -731,7 +737,8 @@ footer {
 .select-toys-container,
 .saved-trees {
     display: flex;
-    justify-content: center;
+    margin-left: 15px;
+
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
@@ -803,4 +810,167 @@ footer {
     width: 20px;
     height: 20px;
     background-color: #24c5db;
+}
+
+.garlands-container {
+    display: contents;
+}
+.lightrope {
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
+    margin: -15px 0 10px 58px;
+    padding: 0;
+    pointer-events: none;
+    width: 100%;
+    &:nth-child(1) {
+        top: 20%;
+    }
+    &:nth-child(2) {
+        top: 35%;
+    }
+    &:nth-child(3) {
+        top: 50%;
+    }
+    &:nth-child(4) {
+        top: 65%;
+    }
+    &:nth-child(5) {
+        top: 77%;
+    }
+    &:nth-child(6) {
+        top: 100%;
+    }
+
+    li {
+        position: relative;
+        animation-fill-mode: both;
+        animation-iteration-count: infinite;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: block;
+        width: $globe-width;
+        height: $globe-height;
+        border-radius: 50%;
+        margin: $globe-spacing/2;
+        display: inline-block;
+
+        animation-duration: 2s;
+        &:nth-child(2n + 1) {
+            animation-duration: 0.4s;
+        }
+        &:nth-child(4n + 2) {
+            animation-duration: 1.1s;
+        }
+        &:nth-child(odd) {
+            animation-duration: 1.8s;
+        }
+        &:nth-child(3n + 1) {
+            animation-duration: 1.4s;
+        }
+        &:after {
+            content: '';
+            top: (0 - $globe-height/2);
+            left: $globe-width - 3;
+            position: absolute;
+            width: $globe-spacing + 12;
+            height: ($globe-height/3 * 2);
+            border-bottom: solid #222 2px;
+            border-radius: 50%;
+        }
+        &:last-child:after {
+            content: none;
+        }
+        &:first-child {
+            margin-left: -$globe-spacing;
+        }
+    }
+}
+
+.lightrope {
+    li {
+        &.red {
+            animation-name: red;
+        }
+
+        &.green {
+            animation-name: green;
+        }
+
+        &.blue {
+            animation-name: blue;
+        }
+
+        &.yellow {
+            animation-name: yellow;
+        }
+    }
+}
+
+@keyframes green {
+    0%,
+    100% {
+        background: rgba(0, 247, 165, 1);
+        box-shadow: 0px 2px 12px 2px rgba(0, 247, 165, 1);
+    }
+    50% {
+        background: rgba(0, 247, 165, 0.4);
+        box-shadow: 0px 2px 12px 2px rgba(0, 247, 165, 0.2);
+    }
+}
+@keyframes blue {
+    0%,
+    100% {
+        background: rgb(21, 164, 207);
+        box-shadow: 0px 2px 12px 2px rgba(0, 255, 255, 1);
+    }
+    50% {
+        background: rgba(52, 156, 216, 0.925);
+        box-shadow: 0px 2px 12px 2px rgba(0, 255, 255, 0.2);
+    }
+}
+@keyframes red {
+    0%,
+    100% {
+        background: rgba(247, 0, 118, 1);
+        box-shadow: 0px 2px 12px 2px rgba(247, 0, 118, 1);
+    }
+    50% {
+        background: rgba(247, 0, 118, 0.4);
+        box-shadow: 0px 2px 12px 2px rgba(247, 0, 118, 0.2);
+    }
+}
+@keyframes yellow {
+    0%,
+    100% {
+        background: rgba(255, 255, 0, 1);
+        box-shadow: 0px 2px 12px 2px rgba(255, 255, 0, 1);
+    }
+    50% {
+        background: rgba(255, 255, 0, 0.4);
+        box-shadow: 0px 2px 12px 2px rgba(255, 255, 0, 0.2);
+    }
+}
+
+.lightrope {
+    li {
+        &.multi:nth-child(1n + 1) {
+            animation-name: red;
+        }
+
+        &:nth-child(2n + 2).multi {
+            animation-name: green;
+        }
+
+        &:nth-child(3n + 3).multi {
+            animation-name: blue;
+        }
+
+        &:nth-child(4n + 4).multi {
+            animation-name: yellow;
+        }
+    }
 }
