--- a/async-race-app/src/index.css
+++ b/async-race-app/src/index.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: rgb(16, 46, 16);
-    /* font-family: 'Neucha', sans-serif; */
+    font-family: 'Neucha', sans-serif;
     color: white;
     font-size: 16px;
 }
@@ -91,4 +91,78 @@ body {
 
 .btn-generate {
     width: 153px;
+}
+.garage-container {
+    display: flex;
+    flex-direction: column;
+    margin: 40px auto 0 10px;
+}
+.garage-title {
+    padding-bottom: 10px;
+}
+
+.car-container {
+    width: 100%;
+    height: 120px;
+    margin-top: 20px;
+    border-bottom-style: dashed;
+}
+.lights {
+    display: flex;
+    flex-direction: column;
+    width: 30px;
+}
+.green-btn,
+.red-btn {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #00ff2a;
+    border: 1px solid #00ff2a;
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.red-btn {
+    background-color: #f00;
+    border: 1px solid #f00;
+}
+
+.btn-select,
+.btn-remove {
+    cursor: pointer;
+    font-size: 15px;
+    text-transform: uppercase;
+    background-color: #a98ab3;
+    width: 70px;
+    height: 30px;
+    border-radius: 7px;
+    border: 1px solid rgb(118 81 124 / 63%);
+}
+
+.car {
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url('./assets/car2.svg');
+    filter: invert(26%) sepia(24%) saturate(5080%) hue-rotate(308deg) brightness(86%) contrast(85%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 10px;
+}
+.controllers {
+    margin-bottom: 10px;
+}
+.road {
+    display: flex;
+    width: 90%;
+}
+.finish-line {
+    position: relative;
+    left: 84%;
+    width: 25px;
+    height: 70px;
+    background-image: url('./assets/line.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
